# UCFBrainStuff-ResearchDemo

./: .gitignore  .gitmodules  0eyebrows.pickle  0eyesclosed.pickle  10Hzup.pickle  12Hzright.pickle  15Hz.pickle  CMakeLists.txt  EEGsample1.npy  Makefile  __init__.py  autogen.sh  blinky.cc  blinky.h  braingerZone.py  custom-processor.cc  custom-processor.h  cvep_flashy.py  cvep_main.py  cvep_playback.py  cvep_processor.py  eeg.cc  eeg.h  emotiv_loop.py  flashy.py  frag.fs  frag.fsh  option.h  playback.py  processor.cc  processor.h  processor.py  recording1448922769.pickle  sd_main.py  seniordesign.proto  seniordesign_pb2.py  ssvep_flashy.py  ssvep_main.py  ssvep_playback.py  ssvep_processor.py  (+4 more)
cc/: CMakeLists.txt  blinky.cc  custom-processor.h  echo-buffer.h  eeg.cc  eeg.h  frag.fsh  processor.cc  processor.h  research-processor.cc  research-processor.h  vector.h
cvep/: README.md  braingerZone.py  main.py
py/: braingerZone-tmp.py  braingerZone.py  cVEPsync.npy  eeg_test.py  flashy.py  frame2.pickle  main.py  main.pyx  playback.py  recordingProcessor.py  setup.py
ssvep/: braingerZone.py  frame0.pickle  frame1.pickle  frame3.pickle
ssvep/py/: flashy-recording.py
